added links for jQuery lib, script and css.

--- a/dropdown-menu/menu.html
+++ b/dropdown-menu/menu.html
@@ -1,3 +1,11 @@
+<html>
+<head>
+    <link rel="stylesheet" href="menu.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+</head>
+
+<body>
+
 <div id="menu">
   <ul>
     <li><a href="#">Link One</a></li>
@@ -9,3 +17,9 @@
     </li>
   </ul>
 </div>
+
+<script type="text/javascript" src="menu.js"></script>
+
+</body>
+
+</html>
