Second solution, works the same, roughly the same complexity, but is it as easy to read and understand due to the use of the filter method which uses a callback?

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 </head>
 <body>
     <script type="text/javascript">
-        
+        function removeDupeChars(string) {
+            return string
+            .split('')
+                .filter(function(item, pos, self) {
+                  return self.indexOf(item) == pos;
+                })
+            .join('');
+        }
+
+        console.log(removeDupeChars('baraban'));
     </script>
 </body>
 </html>
