Adds a third solution which I like for brevity and readability, but the result may be heavy handed, so also a 4th solution which does not remove all characters that repeat, but only the instances of more than one.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,11 @@
 </head>
 <body>
     <script type="text/javascript">
-        function removeDupeChars(string) {
-            return string
-            .split('')
-                .filter(function(item, pos, self) {
-                  return self.indexOf(item) == pos;
-                })
-            .join('');
-        }
-
-        console.log(removeDupeChars('baraban'));
+        var str = 'baraban'.split('');
+var rmDup = str.filter(function(val, i, str) {
+     return str.lastIndexOf(val) == i;
+});
+console.log(rmDup.join(''));
     </script>
 </body>
 </html>
