--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 </head>
 <body>
     <script type="text/javascript">
-        
+        var arr1 = [1, 3, 7, 9];
+        var arr2 = [0, 2, 4];
+
+        function mergeArrays(arr1, arr2) {
+            var result = arr1.concat(arr2);
+            return result.sort();
+        }
     </script>
 </body>
 </html>
-
